App-deployment-files/HelloWorld1/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-hw-service1
spec:
  selector: 
    app: argocd-hw-app1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
